Added movie posters and movie data to a local json to be used to make fake http requests pending an actual api being created Generating movie list from local data instead of hardcoding Added a toolbar at the top of each page to indicate what page a user is currently viewing and offers a back button that leads to the movie list page

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "QTMD",
   "version": "0.0.1",
-  "author": "Ionic Framework",
+  "author": "Eddy De Leon",
   "homepage": "https://ionicframework.com/",
   "scripts": {
     "ng": "ng",
