--- a/package.json
+++ b/package.json
@@ -14,25 +14,26 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.1.2",
+    "@angular/animations": "~11.2.8",
     "@angular/cdk": "~8.2.3",
-    "@angular/common": "~8.1.2",
-    "@angular/core": "~8.1.2",
-    "@angular/forms": "~8.1.2",
+    "@angular/common": "~11.2.8",
+    "@angular/core": "~11.2.8",
+    "@angular/forms": "~11.2.8",
     "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "~8.1.2",
-    "@angular/platform-browser-dynamic": "~8.1.2",
-    "@angular/router": "~8.1.2",
+    "@angular/platform-browser": "~11.2.8",
+    "@angular/platform-browser-dynamic": "~11.2.8",
+    "@angular/router": "~11.2.8",
     "@capacitor/core": "1.3.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
+    "bootstrap": "^5.0.0-beta3",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.801.2",
@@ -40,9 +41,9 @@
     "@angular-devkit/core": "~8.1.2",
     "@angular-devkit/schematics": "~8.1.2",
     "@angular/cli": "^11.2.7",
-    "@angular/compiler": "~8.1.2",
+    "@angular/compiler": "~11.2.8",
     "@angular/compiler-cli": "^11.2.8",
-    "@angular/language-service": "~8.1.2",
+    "@angular/language-service": "~11.2.8",
     "@capacitor/cli": "1.3.0",
     "@ionic/angular-toolkit": "~2.0.0",
     "@types/jasmine": "~3.3.8",
@@ -62,7 +63,7 @@
     "protractor": "^7.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.4.3"
+    "typescript": "~4.1.5"
   },
   "description": "An Ionic project",
   "husky": {
