--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,9 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    
+    - name: Checkout repository
+      uses: actions/checkout@v2
+      
     - name: Setup Node
       uses: actions/setup-node@v1
       with:
