--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Setup Node
       uses: actions/setup-node@v1
       with:
-        node-version: '10.0'
+        node-version: ${{ matrix.node-version }}
         
     - name: Install Dependencies, build, test
       run: |
