--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,13 +25,10 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
       
-    - name: Setup Node
+    - name: Setup Node ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
         
     - name: Install Dependencies, build, test
-      run: |
-        npm i
-        npm run build
-        npm test
+      run: npm ci && npm run build
